--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   author: crgwilson
+  role_name: zsh
   description: Install zsh
   license: MIT
   min_ansible_version: 2.10
@@ -9,6 +10,10 @@ galaxy_info:
       versions:
         - buster
         - stretch
+    - name: EL
+      versions:
+        - 7
+        - 8
 
   galaxy_tags:
     - zsh
