Update package cache before running molecule tests
For some reason github actions are failing with "no package zsh" for 3/4
distros despite working locally. Updating apt / yum cache before running
the tests in an attempt to fix it.

--- a/molecule/with_oh_my_zsh/converge.yml
+++ b/molecule/with_oh_my_zsh/converge.yml
@@ -6,5 +6,16 @@
   vars:
     zsh_install_oh_my_zsh: true
 
+  pre_tasks:
+    - name: Update apt cache
+      apt:
+        update_cache: true
+      when: ansible_distribution == "Debian"
+
+    - name: Update yum cache
+      yum:
+        update_cache: true
+      when: ansible_distribution == "CentOS"
+
   roles:
     - role: ansible-role-zsh
