--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,5 +3,16 @@
   hosts: all
   become: true
 
+  pre_tasks:
+    - name: Update apt cache
+      apt:
+        update_cache: true
+      when: ansible_distribution == "Debian"
+
+    - name: Update yum cache
+      yum:
+        update_cache: true
+      when: ansible_distribution == "CentOS"
+
   roles:
     - role: ansible-role-zsh
